--- a/index6.html
+++ b/index6.html
@@ -41,6 +41,10 @@
                     .toggle();
                 $("#mines")
                     .toggle();
+                $("#java-img")
+                    .hide();
+                $("#python-img")
+                    .hide();
                 $("#php-img")
                     .toggle(1000);
             });
@@ -50,7 +54,9 @@
                 $("#mines1")
                     .toggle();
                 $("#php-img")
-                    .toggle()
+                    .hide();
+                $("#python-img")
+                    .hide();
                 $("#java-img")
                     .toggle(1000);
             });
@@ -59,6 +65,10 @@
                     .toggle();
                 $("#mines2")
                     .toggle();
+                $("#php-img")
+                    .hide();
+                $("#java-img")
+                    .hide();
                 $("#python-img")
                     .toggle(1000)
 
