--- a/index22.html
+++ b/index22.html
@@ -9,10 +9,9 @@
             $("#res").hide();
             $("#items").on("change", function () {
                 var user_item = $("#items option:selected").val();
-                if (user_item === 'select your item') {
+                if (user_item === "select your item") {
                     $("#res").hide();
-                    alert("choose one");
-
+                    alert("choose one")
                 } else {
                     $.ajax({
                         url: "resources/sample1.json",
@@ -24,15 +23,17 @@
                             $(response).each(function (index) {
                                 if (response[index].type === user_item) {
                                     $(response[index].model).each(function (i) {
-                                        $("#res").append("<option>" + response[index].model[i] + "</option>");
+                                        $("#res").append("<option>" + response[index].model[i] + "</option>")
                                     })
                                 }
-
                             })
                         }
+
                     })
                 }
             })
+
+
         })
     </script>
 </head>
